# buildhuman

./: .gitignore  ASSET_STATE_RULES.md  ASSET_SYSTEM.md  CLAUDE.md  README.md  REFACTOR_COMPLETE.md  REFACTOR_PLAN.md  REFACTOR_STATUS.md  SUBMISSION_WITHDRAWAL.md
app/: .env.example  README.md  package.json  vite.config.ts  vitest.config.ts
app/src/: App.css  App.tsx  AssetLibrary.css  AssetLibrary.tsx  BabylonScene.tsx  DropdownMenu.css  HeightForAgeChart.tsx  ModerationPanel.css  ModerationPanel.tsx  NotificationsCenter.css  NotificationsCenter.tsx  Settings.css  Settings.tsx  Tabs.tsx  WeightForAgeChart.css  WeightForAgeChart.tsx  config.ts
app/src-tauri/: Cargo.toml  blender_auto_export.py  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: asset_manager.rs  bevy.rs  gpu_compute.rs  gpu_renderer.rs  main.rs  mesh_commands.rs  mesh_generation.rs  settings.rs  tauri_plugin.rs  wgpu.rs
app/src-tauri/src/mesh/: brick_map.rs  dual_contouring.rs  generator.rs  gltf_export.rs  grid_trait.rs  lerp.rs  mod.rs  mould.rs  sdf.rs  skeleton.rs  spline.rs  types.rs  voxel_grid.rs
app/src-tauri/src/shaders/: basic.wgsl  dual_contouring_compute.wgsl  dual_contouring_sparse.wgsl  sdf_compute.wgsl  sdf_compute_sparse.wgsl
app/src/components/: ConfirmDialog.css  ConfirmDialog.tsx  DropdownMenu.tsx  Icon.tsx  NotificationsCenter.css  NotificationsCenter.tsx  ReleaseAnnouncementModal.css  ReleaseAnnouncementModal.tsx  Tabs.css  Tabs.tsx
app/src/components/asset-library/: AssetCard.tsx  AssetDetailPanel.tsx  AssetEditorExample.tsx  (+3 more)
app/src/machines/: assetEditingMachine.ts  assetMachineSync.ts  assetPublishingMachine.ts  useAssetPublishing.ts
app/src/types/: asset.ts
app/src/views/: AssetLibrary.tsx  Settings.tsx
docs/: MOULD_SYSTEM_PLAN.md  RUST_MIGRATION_PLAN.md  profiled-bone-plan.md
service/: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  main.py  manage_keys.py  pyproject.toml  requirements.txt  seed_assets.py
(+81 files in other folders)
