[package]
name = "buildhuman"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [ "protocol-asset", "macos-private-api"] }
tauri-plugin-opener = { version = "2.0.0" }
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2.0.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1.10", features = ["v4", "serde"] }
dirs = "5.0"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "6.1"
notify-debouncer-mini = "0.4"
nalgebra = { version = "0.32", features = ["serde"] }
rayon = "1.8"
once_cell = "1.20"

